k8s/global-health.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-health-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8080"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Accept, Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_method = 'OPTIONS') {
          return 204;
      }
      default_type application/json;
      return 200 '{"status": "gateway-up"}';
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: banking-auth
                port:
                  number: 3000
